# friends-recipes-on-Flask-

./: .gitignore  README.md  pyproject.toml
hexlet_flask/: Makefile  books.txt  example.py  users.txt
hexlet_flask/templates/: 404.html  index.html  login.html  new_user.html
hexlet_flask/templates/books/: edit.html  index.html  new_book.html  show.html
hexlet_flask/templates/users/: index.html  new_user.html  show.html
