[tool.poetry]
name = "hexlet-flask"
version = "0.1.0"
description = ""
authors = ["seiilaa <vseiilaa@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_flask"}]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
